# nanocodex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  PLAN.md  README.md  cliff.toml  deny.toml  install  jaeger-ui-config.json  pyproject.toml
.cargo/: release.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
benchmarks/: codex_parity_workload.json  codex_stateful_workload.json  fork_results.md  long_prompt_profile_2026-07-20.md  single_prompt_profile_2026-07-20.md  stock_codex_fork_bench.py
bindings/python/: Cargo.toml  README.md
bindings/python/examples/: events.py  follow_on.py
bindings/python/python/nanocodex/: __init__.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_binding.py
bindings/wasm/: Cargo.toml  README.md
crates/nanocodex/: CHANGELOG.md  Cargo.toml
crates/nanocodex-core/: Cargo.toml
crates/nanocodex-mcp/: Cargo.toml
crates/nanocodex-mcp/src/: catalog.rs  lib.rs
crates/nanocodex-mcp/tests/fixtures/: stdio-server.mjs
crates/nanocodex-observability/: Cargo.toml
crates/nanocodex-service/: CHANGELOG.md  Cargo.toml
crates/nanocodex-tools/: CHANGELOG.md  Cargo.toml  NOTICE
crates/nanocodex-tools/src/: lib.rs  runtime.rs  standard.rs  wasm.rs
crates/nanocodex-tools/src/apply_patch/: mod.rs
crates/nanocodex-tools/src/code_mode/: description.rs  embedded.rs  mod.rs  runtime.js  spec.rs  tests.rs
crates/nanocodex-tools/src/hashline/: mod.rs  patch.rs  patch_parser.rs  patch_sections.rs  tests.rs  transaction_fs.rs
crates/nanocodex-tools/src/image_generation/: mod.rs  tests.rs
crates/nanocodex-tools/src/shell/: mod.rs  process.rs  selection.rs
crates/nanocodex-tools/tests/: tracing.rs
docs/: CODEX_MULTI_AGENT_V2_COMPARISON.md  HARBOR_RS_LOG.md  MPP.md  OBSERVABILITY.md  RELEASING.md  RESPONSES_TOWER.md  RESPONSES_TOWER_REWRITE.md  TUI_NOTES.md
evals/: fix-git.Dockerfile  history-derived-codex.yaml  history-derived.yaml  terminal-bench-2-1-high-failures.yaml  terminal-bench-2-1-leaderboard-high.yaml  terminal-bench-2-1-subagents-high-failures.yaml  terminal-bench-2-1.yaml  terminal-bench-2.yaml
evals/pytest/: Dockerfile
examples/: Cargo.toml  README.md  codex_parity_bench.rs  custom_tool.rs  fork_conversations.rs  mcp.rs  subagents.rs
examples/node/: README.md  index.mjs  package-lock.json  package.json
examples/python/: events.py
examples/react-vite/: README.md  index.html  package-lock.json  package.json  vite.config.ts
harbor_adapter/: __init__.py  agent.py  environment.py  nanocodex.Dockerfile  test_agent.py  verifier.py
js/: README.md
js/bindings/: README.md  index.d.mts  index.mjs  internal.mjs  package-lock.json  (+2 more)
py/: README.md
py/bindings/: README.md  pyproject.toml
py/bindings/src/: lib.rs
scripts/: changelog.sh  publish-crates.sh
specs/: _template.md  hashline-ergonomics.md  hashline-read-patch-transaction-integration.md  hashline-transaction-only-integration.md  multi-agent-reliability.md
src/: error.rs  lib.rs  main.rs  protocol.rs  responses.rs  shell.rs
web/: README.md  package-lock.json  package.json  tsconfig.json
(+1936 files in other folders)
