[package]
name = "harness"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Optimized enough for representative CPU profiles while retaining full symbols.
[profile.profiling]
inherits = "release"
debug = 2
strip = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
