[package]
name = "nanocodex-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
nanocodex.workspace = true
pyo3 = { workspace = true, features = ["extension-module"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
