[package]
name = "nanocodex-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
bm25.workspace = true
http.workspace = true
nanocodex-core.workspace = true
nanocodex-tools.workspace = true
rmcp.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "rt", "sync", "time"] }

[lints]
workspace = true
