[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "nanocodex"
version = "0.1.0"
description = "Embedded Python bindings for the Nanocodex agents SDK"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Nanocodex Contributors" }]

[project.urls]
Homepage = "https://github.com/gakonst/nanocodex"
Repository = "https://github.com/gakonst/nanocodex"

[tool.maturin]
module-name = "nanocodex._native"
python-source = "python"
features = ["pyo3/extension-module"]
